# cloud-governance-finops-platform

./: .gitignore  README.md  main.tf  outputs.tf  pyproject.toml  requirements.txt  variables.tf
data/raw/: aws_cost_usage.csv  aws_inventory_snapshot.csv  security_findings.csv
docs/: ai-review-notes.md  architecture.md  data_dictionary.md  deployment-notes.md  operating_model.md  runbook.md
lambda/: report_handler.py
reports/: account_scorecard.csv  executive_brief.md  executive_summary.html  findings_summary.json  portfolio_kpis.json  remediation_recommendations.csv
scripts/: render_inventory.py  report_hook.py
src/infra_reporting_starter/: __init__.py  cli.py  config.py  reporting.py  sample_data.py
terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
tests/: test_reporting_smoke.py
