[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cloud-governance-finops-platform"
version = "0.2.0"
description = "Production-oriented cloud governance and FinOps intelligence platform with Terraform and Python reporting tools."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.0",
]

[project.scripts]
cloud-governance-finops-platform = "infra_reporting_starter.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
